--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,18 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
-github_username:  chjulie
+#github_username:  chjulie
+
+social_links:
+  - platform: github
+    title: GitHub
+    icon: github
+    url: https://github.com/chjulie
+
+  - platform: linkedin
+    title: LinkedIn
+    icon: linkedin
+    url: https://www.linkedin.com/in/juliecharlet/
 
 # Build settings
 theme: minima  # minima
